--- a/index.mdx
+++ b/index.mdx
@@ -1,22 +1,17 @@
 ---
 title: "מדריך חיבור ואינטגרציה - Splitz"
+description: "שמחים שהצטרפתם למערכת, הכנו עבורכם מדריך פשוט שמיועד למתחילים, כיצד לחבר את המערכת שלנו אליכם"
 ---
-
-## 
-
-Get your documentation site up and running in minutes.
 
 <Card title="Start here" icon="rocket" horizontal href="/quickstart">
   Follow our three step quickstart guide.
 </Card>
 
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
+## חיבור סליקה לפלטפורמת No Code
 
 <Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
-    Edit your docs locally and preview them in real time.
+  <Card title="Lovable" href="/development" img="lovable-icon-bg-light.png">
+    חיבור מערכת הסליקה לאפליקציית הלובבאל שלכם.
   </Card>
   <Card title="Customize your site" icon="palette" href="/essentials/settings">
     Customize the design and colors of your site to match your brand.
@@ -28,28 +23,3 @@ Design a docs site that looks great and empowers your users.
     Auto-generate API documentation from OpenAPI specifications.
   </Card>
 </Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
