Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -10,7 +10,7 @@ description: "שמחים שהצטרפתם למערכת, הכנו עבורכם מ
 ## חיבור סליקה לפלטפורמת No Code
 
 <Columns cols={2}>
-  <Card title="Lovable" href="/development" img="lovable-icon-bg-light.png">
+  <Card title="Lovable" href="/development" img="images/lovable-icon-bg-light.png">
     חיבור מערכת הסליקה לאפליקציית הלובבאל שלכם.
   </Card>
   <Card title="Customize your site" icon="palette" href="/essentials/settings">
