--- a/index.mdx
+++ b/index.mdx
@@ -1,16 +1,12 @@
 ---
-title: "מדריך חיבור ואינטגרציה - Splitz"
+title: "מדריך חיבור - Splitz"
 description: "שמחים שהצטרפתם למערכת, הכנו עבורכם מדריך פשוט שמיועד למתחילים, כיצד לחבר את המערכת שלנו אליכם"
 ---
-
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our three step quickstart guide.
-</Card>
 
 ## חיבור סליקה לפלטפורמת No Code
 
 <Columns cols={2}>
-  <Card title="Lovable" href="/development" img="images/lovable-icon-bg-light.png">
+  <Card title="Lovable" href="/lovable" img="images/lovable-icon-bg-light.png">
     חיבור מערכת הסליקה לאפליקציית הלובבאל שלכם.
   </Card>
   <Card title="Customize your site" icon="palette" href="/essentials/settings">
