Documentation edits made through Mintlify web editor

--- a/lovable.mdx
+++ b/lovable.mdx
@@ -25,14 +25,13 @@ title: "חיבור סליקה לאפליקציית Lovable"
 אחרי שהבנתם את הרקע הטכני, בואו נתחיל בהגדרה של לינק התשלום אצלכם במערכת.
 
 <Danger>
-  חשוב מאוד שכל הקריאות שאתם מבצעים למערכת שלנו, חייבות להיות לא חשופות לצד הלקוח על מנת לשמור על תהליך התשלום שלכם מאובטח. בLovable ניתן לעשות זאת באמצעות פיצר שנקרא Backend Function.
+  חשוב מאוד שכל הקריאות שאתם מבצעים למערכת שלנו לא יהיו חשופות לצד הלקוח על מנת לשמור על 
+
+  תהליך התשלום שלכם מאובטח. בLovable ניתן לעשות זאת באמצעות פיצר שנקרא Backend Function.
 </Danger>
 
 <Steps>
   <Step title="זיהוי לקוח ותשלום">
-    
-  </Step>
-  <Step title="Preview locally">
     Navigate to your docs directory where your `docs.json` file is located, and run the following command:
 
     ```bash
@@ -45,9 +44,6 @@ title: "חיבור סליקה לאפליקציית Lovable"
     
   </Step>
 </Steps>
-
-
-By default, Mintlify uses port 3000. You can customize the port Mintlify runs on by using the `--port` flag. For example, to run Mintlify on port 3333, use this command:
 
 ```bash
 mint dev --port 3333
