--- a/lovable.mdx
+++ b/lovable.mdx
@@ -20,7 +20,7 @@ title: "חיבור סליקה לאפליקציית Lovable"
 
 בהתחלה, ברגע שלקוח מבקש ממכם להירשם לחבילה מסויימת, אתם תהיו חייבים לשייך לינק לתשלום עם המייל שלו אצלנו במערכת
 
-<Info>
+## <Info>
   **מה זה לינק לתשלום?**
 
   לינק לתשלום הוא דף תשלום שהמערכת שלנו משייכת ללקוח שלכם, הדרך שלנו לזהות מי ביצע את התשלום אצלכם הוא על ידי המייל של הלקוח, ולכן ברגע שלקוח מעוניין להירשם לחבילה אצלכם אתם חייבים להגיד לנו מי רוצה לשלם כדי שאחרי זה תוכלו לוודא שאותו לקוח שילם אחרי הרכישה, ולתת לו גישה למערכת שלכם.
