--- a/index.mdx
+++ b/index.mdx
@@ -7,15 +7,6 @@ description: "שמחים שהצטרפתם למערכת, הכנו עבורכם מ
 
 <Columns cols={2}>
   <Card title="Lovable" href="/lovable" img="images/lovable-icon-bg-light.png">
-    חיבור מערכת הסליקה לאפליקציית הלובבאל שלכם.
-  </Card>
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
-    Customize the design and colors of your site to match your brand.
-  </Card>
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
+    חיבור מערכת הסליקה לאפליקציית הלובבאל שלכם
   </Card>
 </Columns>
