--- a/lovable.mdx
+++ b/lovable.mdx
@@ -47,7 +47,7 @@ title: "חיבור סליקה לאפליקציית Lovable"
 
     אחרי ששיניתם את הדברים האלו תוכלו לשלוח לAI את הפרומט.
 
-    ```prompt_lovable.txt expandable
+    ``` expandable
     עכשיו אדריך אותך בעת לחיצה על כפתור התשלום, אני רוצה שתשתמש בחבילת NPM שנקראת splitz-payments על מנת לחבר את הסליקה למערכת שלי באופן שלא חשוף לצד לקוח, אני רוצה שתיצור לינק לתשלום שמשוייך ללקוח שכרגע מחובר, ולאחר מכן תעביר אותו ללינק שמשוייך אליו.
     
     דוגמא ליצירת לינק לתשלום שמשוייך ללקוח:
@@ -347,7 +347,7 @@ async function handleUpgrade(userSubscriptionUid) {
 
 ### קוד לטיפול בפרמטרים:
 
-````javascript
+```
 // בעמוד upgrade-success:
 
 // קרא את הפרמטרים מה-URL
@@ -378,40 +378,4 @@ if (status === 'success') {
   console.log('❌ שינוי תוכנית נכשל');
   
   // הצג הודע
-
-```bash
-mint broken-links
-````
-
-## Deployment
-
-If the deployment is successful, you should see the following:
-
-<Frame>
-  <img
-    src="/images/checks-passed.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
-
-## Code formatting
-
-We suggest using extensions on your IDE to recognize and format MDX. If you're a VSCode user, consider the [MDX VSCode extension](https://marketplace.visualstudio.com/items?itemName=unifiedjs.vscode-mdx) for syntax highlighting, and [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) for code formatting.
-
-## Troubleshooting
-
-<AccordionGroup>
-  <Accordion title='Error: Could not load the "sharp" module using the darwin-arm64 runtime'>
-    This may be due to an outdated version of node. Try the following:
-
-    1. Remove the currently-installed version of the CLI: `npm remove -g mint`
-    2. Upgrade to Node v19 or higher.
-    3. Reinstall the CLI: `npm i -g mint`
-  </Accordion>
-  <Accordion title="Issue: Encountering an unknown error">
-    Solution: Go to the root of your device and delete the `~/.mintlify` folder. Then run `mint dev` again.
-  </Accordion>
-</AccordionGroup>
-
-Curious about what changed in the latest CLI version? Check out the [CLI changelog](https://www.npmjs.com/package/mintlify?activeTab=versions).
+```
