Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -3,6 +3,8 @@ title: "מדריך חיבור - Splitz"
 description: "שמחים שהצטרפתם למערכת, הכנו עבורכם מדריך פשוט שמיועד למתחילים, כיצד לחבר את המערכת שלנו אליכם"
 ---
 
+<iframe src="https://www.youtube.com/embed/UIwkzqZk4M0" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
+
 ## חיבור סליקה לפלטפורמת No Code
 
 <Columns cols={2}>
