Documentation edits made through Mintlify web editor

--- a/lovable.mdx
+++ b/lovable.mdx
@@ -341,5 +341,5 @@ if (status === 'success') {
 } else if (status === 'failed') {
   console.log('❌ שינוי תוכנית נכשל');
   
-  // הצג הודע
+  // הצג הודעה
 ```
