--- a/base44.mdx
+++ b/base44.mdx
@@ -20,6 +20,10 @@ title: "חיבור סליקה לאפליקציית base44"
 
 סך הכל: 2 מפתחות (API Key, Payment link uid)
 
+המזהה לינק לתשלום ניתן להשיג מהדאשבורד בעמוד: לינקים לתשלום -\> לחיצה על הלינק לתשלום ועל כפתור העתק uid בצד שמאל במסך
+
+קבלת מפתח api במסך ההגדרות -\> api key
+
 תהליך האינטגרציה מורכב מ3 שלבים מאוד פשוט שמבוססים על הגיון פשוט:
 
 זיהוי לקוח ותשלום -\> ולידציה לאחר תשלום -\> יצירת לינק ניהול ללקוחות
