--- a/lovable-onetime.mdx
+++ b/lovable-onetime.mdx
@@ -98,6 +98,10 @@ description: "מדריך מלא לחיוב לקוחות חד-פעמי - לקור
 
 כל הפונקציות ההתממשקות והאינטגרציה עם SPLITZ מתבצעת דרך חבילת הNPM ולא בשום פנים ואופן בצורה ישירה לAPI!
 
+המזהה לינק לתשלום ניתן להשיג מהדאשבורד בעמוד: לינקים לתשלום -\> לחיצה על הלינק לתשלום ועל כפתור העתק uid בצד שמאל במסך
+
+קבלת מפתח api במסך ההגדרות -\> api key
+
 ### שלב 1: יצירת לינק תשלום
 
 ```javascript
