--- a/lovable.mdx
+++ b/lovable.mdx
@@ -15,6 +15,10 @@ title: "חיבור סליקה לאפליקציית Lovable"
   - לינק לתשלום שמקושר למוצר מנוי
 </Info>
 
+המזהה לינק לתשלום ניתן להשיג מהדאשבורד בעמוד: לינקים לתשלום -\> לחיצה על הלינק לתשלום ועל כפתור העתק uid בצד שמאל במסך
+
+קבלת מפתח api במסך ההגדרות -\> api key
+
 תהליך האינטגרציה מורכב מ3 שלבים מאוד פשוט שמבוססים על הגיון פשוט:
 
 זיהוי לקוח ותשלום -\> ולידציה לאחר תשלום -\> יצירת לינק ניהול ללקוחות
