Documentation edits made through Mintlify web editor

--- a/base44-onetime.mdx
+++ b/base44-onetime.mdx
@@ -102,6 +102,8 @@ description: "מדריך מלא לחיוב לקוחות חד-פעמי - לקור
 
 קבלת מפתח api במסך ההגדרות -\> api key
 
+**שימו לב שחובה להגדיר כתובת לחזרה לאחר תשלום מוצלחה (success url) על מנת שהמערכת תדע לאן להפנות את הלקוח שלכם לאחר תשלום מוצלח - תוכלו לבצע זאת בהגדרות לינק לתשלום.**
+
 ### שלב 1: יצירת לינק תשלום
 
 ```javascript
