--- a/base44.mdx
+++ b/base44.mdx
@@ -36,6 +36,8 @@ title: "חיבור סליקה לאפליקציית base44"
   לינק לתשלום הוא דף תשלום שהמערכת שלנו משייכת ללקוח שלכם, הדרך שלנו לזהות מי ביצע את התשלום אצלכם הוא על ידי המייל של הלקוח, ולכן ברגע שלקוח מעוניין להירשם לחבילה אצלכם אתם חייבים להגיד לנו מי רוצה לשלם כדי שאחרי זה תוכלו לוודא שאותו לקוח שילם אחרי הרכישה, ולתת לו גישה למערכת שלכם.
 </Info>
 
+**שימו לב שחובה להגדיר כתובת לחזרה לאחר תשלום מוצלחה (success url) על מנת שהמערכת תדע לאן להפנות את הלקוח שלכם לאחר תשלום מוצלח - תוכלו לבצע זאת בהגדרות לינק לתשלום.**
+
 אחרי שהבנתם את הרקע הטכני, בואו נתחיל בהגדרה של לינק התשלום אצלכם במערכת.
 
 <Danger>
