--- a/lovable-onetime.mdx
+++ b/lovable-onetime.mdx
@@ -123,6 +123,8 @@ const splitz = new SplitzClient({
 
 לאחר המימוש בקוד, הלקוח חייב להגדיר בהגדרות הלינק לתשלום את הכתובת להפנייה לאחר תשלום מוצלח!
 
+**שימו לב שחובה להגדיר כתובת לחזרה לאחר תשלום מוצלחה (success url) על מנת שהמערכת תדע לאן להפנות את הלקוח שלכם לאחר תשלום מוצלח - תוכלו לבצע זאת בהגדרות לינק לתשלום.**
+
 ### שלב 2: בדיקה האם הזמנה שולמה לאחר התשלום:
 
 ```javascript
