Documentation edits made through Mintlify web editor

--- a/base44.mdx
+++ b/base44.mdx
@@ -73,6 +73,8 @@ title: "חיבור סליקה לאפליקציית base44"
 
     THIS CODE WILL ONLY BE USED ON THE BACKEND.
 
+    **הפרמטר שייחזור בURL ששמו: subscription_uid  יעזור לכם לזהות את המנוי ולאמת את התשלום.**
+
     ```javascript
     const SplitzClient = require('splitz-payments');
     
