--- a/lovable-onetime.mdx
+++ b/lovable-onetime.mdx
@@ -127,6 +127,8 @@ const splitz = new SplitzClient({
 
 ### שלב 2: בדיקה האם הזמנה שולמה לאחר התשלום:
 
+**הפרמטר שייחזור בURL ששמו: order_uid יעזור לכם לזההות את ההזמנה ולאמת את התשלום.**
+
 ```javascript
 const SplitzClient = require('splitz-payments');
 
