--- a/lovable.mdx
+++ b/lovable.mdx
@@ -68,6 +68,8 @@ title: "חיבור סליקה לאפליקציית Lovable"
   <Step title="אימות תשלום וגישה למערכת">
     השלב השני נועד לבדוק האם הלקוח שלכם אכן שילם אחרי שיצא מלינק התשלום ששלחנו אותו עכשיו, במידה והוא שילם אנחנו מגדירים אותו במערכת כלקוח משלם ונותנים לו גישה למערכת.
 
+    **הפרמטר שייחזור בURL ששמו: subscription_uid  יעזור לכם לזהות את המנוי ולאמת את התשלום.**
+
     THIS CODE WILL ONLY BE USED ON THE BACKEND.
 
     ```javascript
