Documentation edits made through Mintlify web editor

--- a/base44-onetime.mdx
+++ b/base44-onetime.mdx
@@ -131,6 +131,8 @@ const splitz = new SplitzClient({
 
 **הפרמטר שייחזור בURL ששמו: order_uid יעזור לכם לזההות את ההזמנה ולאמת את התשלום.**
 
+**לדוגמא: **[**https://example.com/subscriptionCallback?order_uid**](https://example.com/subscriptionCallback?order_uid)**=xxx**
+
 ```javascript
 const SplitzClient = require('splitz-payments');
 
