--- a/base44.mdx
+++ b/base44.mdx
@@ -75,6 +75,8 @@ title: "חיבור סליקה לאפליקציית base44"
 
     **הפרמטר שייחזור בURL ששמו: subscription_uid  יעזור לכם לזהות את המנוי ולאמת את התשלום.**
 
+    **לדוגמא: **[**https://example.com/subscriptionCallback?subscription_uid=xxx**](https://example.com/subscriptionCallback?subscription_uid=xxx)
+
     ```javascript
     const SplitzClient = require('splitz-payments');
     
