--- a/lovable-onetime.mdx
+++ b/lovable-onetime.mdx
@@ -129,6 +129,8 @@ const splitz = new SplitzClient({
 
 **הפרמטר שייחזור בURL ששמו: order_uid יעזור לכם לזההות את ההזמנה ולאמת את התשלום.**
 
+**לדוגמא: **[**https://example.com/subscriptionCallback?order_uid**](https://example.com/subscriptionCallback?order_uid)**=xxx**
+
 ```javascript
 const SplitzClient = require('splitz-payments');
 
