--- a/lovable.mdx
+++ b/lovable.mdx
@@ -70,6 +70,8 @@ title: "חיבור סליקה לאפליקציית Lovable"
 
     **הפרמטר שייחזור בURL ששמו: subscription_uid  יעזור לכם לזהות את המנוי ולאמת את התשלום.**
 
+    **לדוגמא: **[**https://example.com/subscriptionCallback?subscription_uid=xxx**](https://example.com/subscriptionCallback?subscription_uid=xxx)
+
     THIS CODE WILL ONLY BE USED ON THE BACKEND.
 
     ```javascript
