Documentation edits made through Mintlify web editor

--- a/base44.mdx
+++ b/base44.mdx
@@ -75,7 +75,7 @@ title: "חיבור סליקה לאפליקציית base44"
 
     **הפרמטר שייחזור בURL ששמו: subscription_uid  יעזור לכם לזהות את המנוי ולאמת את התשלום.**
 
-    **לדוגמא: **[**https://example.com/subscriptionCallback?subscription_uid=xxx**](https://example.com/subscriptionCallback?subscription_uid=xxx)
+    [**לדוגמא: https://example.com/subscriptionCallback?order_uid=xxx**](https://example.com/subscriptionCallback?order_uid)
 
     ```javascript
     const SplitzClient = require('splitz-payments');
