--- a/lovable.mdx
+++ b/lovable.mdx
@@ -70,7 +70,7 @@ title: "חיבור סליקה לאפליקציית Lovable"
 
     **הפרמטר שייחזור בURL ששמו: subscription_uid  יעזור לכם לזהות את המנוי ולאמת את התשלום.**
 
-    **לדוגמא: **[**https://example.com/subscriptionCallback?subscription_uid=xxx**](https://example.com/subscriptionCallback?subscription_uid=xxx)
+    [**לדוגמא: https://example.com/subscriptionCallback?order_uid=xxx**](https://example.com/subscriptionCallback?order_uid)
 
     THIS CODE WILL ONLY BE USED ON THE BACKEND.
 
